[gd_scene load_steps=5 format=3 uid="uid://dyfbl6sp7vs6g"]

[ext_resource type="Script" path="res://MENUS/PO.gd" id="1_vjcly"]
[ext_resource type="FontFile" uid="uid://cvkofnt8n3rho" path="res://assets/fonts/Pixeled.ttf" id="2_ss415"]
[ext_resource type="AudioStream" uid="uid://dcwhqf8kw3mc1" path="res://assets/sfx/UI_back.mp3" id="3_dieyh"]
[ext_resource type="AudioStream" uid="uid://d0w0ntgpxnbkk" path="res://assets/sfx/ui_yes.mp3" id="4_6ik5b"]

[node name="pause optiions" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vjcly")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = -64.0
offset_top = -40.0
offset_right = 102.0
offset_bottom = -24.0
scale = Vector2(0.770779, 0.760001)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Master" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ss415")
theme_override_font_sizes/font_size = 5
text = "Master Volume:                                       Mute:"

[node name="Master volume" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
min_value = -20.0
max_value = 20.0

[node name="CheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/Master volume"]
layout_mode = 0
offset_left = 166.066
offset_top = -20.6316
offset_right = 190.066
offset_bottom = 3.36842

[node name="SFX" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ss415")
theme_override_font_sizes/font_size = 5
text = "SFX Volume:                                              Mute:"

[node name="SFX volume" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
min_value = -20.0
max_value = 20.0

[node name="sfx" type="CheckBox" parent="MarginContainer/VBoxContainer/SFX volume"]
layout_mode = 0
offset_left = 166.066
offset_top = -20.6316
offset_right = 190.066
offset_bottom = 3.36842

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = -32.0
offset_top = -88.0
offset_right = 32.0
offset_bottom = -60.0
theme_override_fonts/font = ExtResource("2_ss415")
theme_override_font_sizes/font_size = 10
text = "options"

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)

[node name="UI_back" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_dieyh")

[node name="UI_yes" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_6ik5b")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = -72.0
offset_top = -112.0
offset_right = -44.0
offset_bottom = -90.0
theme_override_fonts/font = ExtResource("2_ss415")
theme_override_font_sizes/font_size = 5
text = "BACK"

[connection signal="value_changed" from="MarginContainer/VBoxContainer/Master volume" to="." method="_on_master_volume_value_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Master volume/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/SFX volume" to="." method="_on_sfx_volume_value_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/SFX volume/sfx" to="." method="_on_sfx_toggled"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
